<resources>
    <string name="app_name">MyTaskManager</string>
    <string name="task_title">Task Title</string>
    <string name="task_descriptin">Task Description</string>
    <string name="action_button">action button</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="display_date">Due Date</string>
    <string name="priority">Priority</string>
    <string-array name="priority_levels">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>