<!-- res/layout/dialog_add_task.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/taskTitleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/task_title" />

    <EditText
        android:id="@+id/taskDescriptionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/task_descriptin" />

    <TextView
        android:id="@+id/dueDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/display_date" />


    <Button
        android:id="@+id/selectDueDateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_due_date" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select Priority:" />

    <Spinner
        android:id="@+id/taskPriorityInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/priority_levels" />

</LinearLayout>
