<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/taskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/taskDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_descriptin"
            android:layout_marginTop="8dp"
            android:textColor="#757575"/>

        <TextView
            android:id="@+id/taskDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_date"
            android:layout_marginTop="8dp"
            android:textColor="#757575"/>

        <TextView
            android:id="@+id/taskPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:layout_marginTop="8dp"
            android:textColor="#757575"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
